# atlas

./: .coderabbit.yaml  .gitattributes  .gitignore  ATLAS-DESIGN-RATIONALE.md  Atlas-SPEC.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FIXES-2026-02-14.md  FOUNDATION-PHASES-FIXED.md  INTERPRETER_VM_PARITY_REPORT.md  PERFORMANCE_REPORT_v02.md  PRD.md  README.md  ROADMAP.md  RUNTIME_ERROR_SPAN_AUDIT.md  SECURITY.md  STABILITY_AUDIT_REPORT.md  STATUS.md  atlas-dev.db  atlas.toml.example  deny.toml
crates/atlas-build/: Cargo.toml
crates/atlas-build/src/: build_order.rs  builder.rs  error.rs  lib.rs  module_resolver.rs  profile.rs  script.rs  targets.rs
crates/atlas-build/src/cache/: metadata.rs
crates/atlas-build/tests/: builder_tests.rs  integration_tests.rs  profile_tests.rs  script_tests.rs
crates/atlas-cli/: Cargo.toml
crates/atlas-cli/src/: config.rs  main.rs
crates/atlas-cli/src/commands/: add.rs  ast.rs  build.rs  check.rs  debug.rs  fmt.rs  init.rs  install.rs  lsp.rs  mod.rs  profile.rs  publish.rs  remove.rs  repl.rs  repl_tui.rs  run.rs  test.rs  typecheck.rs  update.rs  watch.rs
crates/atlas-cli/src/debugger/: mod.rs  repl.rs
crates/atlas-cli/src/testing/: discovery.rs  mod.rs  reporter.rs  runner.rs
crates/atlas-cli/tests/: cli_e2e_tests.rs  cli_integration_tests.rs  cli_workflows_tests.rs  debug_cli_tests.rs  fmt_tests.rs  lsp_cli_tests.rs  package_cli_tests.rs  scaffolding_tests.rs  typecheck_dump_tests.rs  watch_tests.rs
crates/atlas-cli/tests/snapshots/: ast_dump_tests__ast_dump_array_literal.snap  ast_dump_tests__ast_dump_binary_expression.snap  ast_dump_tests__ast_dump_boolean_literal.snap  ast_dump_tests__ast_dump_function_call.snap  ast_dump_tests__ast_dump_function_declaration.snap  ast_dump_tests__ast_dump_if_statement.snap  ast_dump_tests__ast_dump_simple_literal.snap  ast_dump_tests__ast_dump_string_literal.snap  ast_dump_tests__ast_dump_variable_declaration.snap  ast_dump_tests__ast_dump_while_loop.snap  typecheck_dump_tests__typecheck_dump_array_type.snap  typecheck_dump_tests__typecheck_dump_function.snap  typecheck_dump_tests__typecheck_dump_function_with_local_vars.snap  typecheck_dump_tests__typecheck_dump_function_with_loop.snap  typecheck_dump_tests__typecheck_dump_multiple_variables.snap  typecheck_dump_tests__typecheck_dump_mutable_variable.snap  typecheck_dump_tests__typecheck_dump_simple_variable.snap
crates/atlas-config/: Cargo.toml
crates/atlas-config/src/: global.rs  lib.rs  loader.rs  manifest.rs  project.rs
crates/atlas-config/tests/: config_tests.rs  manifest_tests.rs
crates/atlas-formatter/: Cargo.toml
crates/atlas-formatter/src/: comments.rs  formatter.rs  lib.rs  visitor.rs
crates/atlas-formatter/tests/: comments_tests.rs  formatter_tests.rs
crates/atlas-jit/: Cargo.toml  JIT_STATUS.md
crates/atlas-jit/src/: CLAUDE.md  codegen.rs  lib.rs
crates/atlas-jit/tests/: jit_tests.rs
crates/atlas-lsp/: Cargo.toml
crates/atlas-lsp/src/: CLAUDE.md  actions.rs  call_hierarchy.rs  completion.rs  convert.rs  document.rs  folding.rs  hover.rs  index.rs  lib.rs  main.rs  navigation.rs  references.rs  semantic_tokens.rs  server.rs  symbols.rs
crates/atlas-lsp/src/handlers/: mod.rs
crates/atlas-lsp/src/refactor/: extract.rs  inline.rs  mod.rs  rename.rs
crates/atlas-lsp/tests/: call_hierarchy_tests.rs  call_hierarchy_tests.rs.bak  completion_tests.rs  document_sync_tests.rs  initialization_tests.rs  integration_tests.rs  lsp_actions_tests.rs  lsp_hover_tests.rs  lsp_inlay_tests.rs  lsp_integration_tests.rs  lsp_protocol_tests.rs  lsp_symbols_tests.rs  lsp_tokens_tests.rs  performance_tests.rs  refactor_tests.rs  references_tests.rs  workspace_symbol_tests.rs
crates/atlas-package/: Cargo.toml
crates/atlas-package/src/: build_order.rs  lib.rs  lockfile.rs  manifest.rs  resolver.rs  validator.rs
crates/atlas-package/src/resolver/: conflict.rs  version_solver.rs
crates/atlas-package/tests/: build_order_tests.rs  integration_tests.rs  phase08c_integration_tests.rs
crates/atlas-runtime/: Cargo.toml
crates/atlas-runtime/benches/: interpreter.rs  v02_comprehensive_benches.rs  v02_interpreter_benches.rs  v02_stdlib_benches.rs  v02_vm_optimization_benches.rs  vm_performance_benches.rs
crates/atlas-runtime/examples/: 01_hello_world.rs  02_custom_functions.rs  03_value_conversion.rs  04_persistent_state.rs  05_error_handling.rs  06_sandboxing.rs  run_demo_allow_all.rs
crates/atlas-runtime/fuzz/: Cargo.toml
crates/atlas-runtime/fuzz/fuzz_targets/: parser_fuzz.rs  typechecker_fuzz.rs  vm_fuzz.rs
crates/atlas-runtime/src/: CLAUDE.md  ast.rs  binder.rs  bytecode.rs  compiler.rs  diagnostic.rs  interpreter.rs  json_value.rs  lexer.rs  lib.rs  method_dispatch.rs  module_executor.rs  module_loader.rs  parser.rs  repl.rs  runtime.rs  stdlib.rs  symbol.rs  token.rs  typecheck_dump.rs  typechecker.rs  types.rs  value.rs  vm.rs
crates/atlas-runtime/src/api/: conversion.rs  mod.rs  native.rs  runtime.rs
crates/atlas-runtime/src/async_runtime/: channel.rs  future.rs  mod.rs  task.rs
crates/atlas-runtime/src/bytecode/: disasm.rs  mod.rs  opcode.rs  optimizer.rs  serialize.rs  validator.rs
crates/atlas-runtime/tests/: advanced_inference_tests.rs  api.rs  api_conversion_tests.rs  api_native_functions_tests.rs  api_tests.rs  assignment_target_tests.rs  ast_instantiation.rs  async_future_tests.rs  async_io_tests.rs  async_primitives_tests.rs  async_runtime.rs  bytecode.rs  bytecode_compiler_integration.rs  closures.rs  collection_iteration_tests.rs  collections.rs  constraint_tests.rs  corpus.rs  datetime_advanced_tests.rs  datetime_core_tests.rs  datetime_regex.rs  debugger.rs  debugger_execution_tests.rs  debugger_inspection_tests.rs  debugger_protocol_tests.rs  diagnostics.rs  ffi.rs  ffi_callback_tests.rs  ffi_integration_complete_tests.rs  ffi_interpreter_tests.rs  ffi_parsing_tests.rs  ffi_types_tests.rs  ffi_vm_tests.rs  first_class_functions_tests.rs  frontend_integration.rs  frontend_syntax.rs  fs_tests.rs  function_return_analysis_tests.rs  generic_type_checking_tests.rs  generics_runtime_tests.rs  (+78 more)
(+961 files in other folders)
