[workspace]
members = [
    "crates/atlas-runtime",
    "crates/atlas-cli",
    "crates/atlas-lsp",
    "crates/atlas-config",
    "crates/atlas-package",
    "crates/atlas-build",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/proxikal/atlas"
homepage = "https://github.com/proxikal/atlas"
documentation = "https://github.com/proxikal/atlas/tree/main/docs"
keywords = ["language", "compiler", "interpreter", "ai-first"]
categories = ["compilers", "development-tools"]
authors = ["Atlas Contributors"]

[workspace.dependencies]
# Testing infrastructure
insta = { version = "1.39", features = ["yaml", "json"] }
rstest = "0.22"
proptest = "1.5"
pretty_assertions = "1.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
# Optimize for size while maintaining good performance
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
