[package]
name = "atlas-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas-runtime = { path = "../atlas-runtime" }
atlas-config = { path = "../atlas-config" }
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"  # Line editor for REPL
ratatui = "0.28"  # TUI framework for rich REPL mode
crossterm = "0.28"  # Terminal backend for ratatui
dirs = "5.0"  # Platform-specific directories (for history file)
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
insta = { workspace = true }
serde_json = "1.0"
predicates = "3.0"
