[package]
name = "atlas-cli"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
atlas-runtime = { path = "../atlas-runtime" }
atlas-config = { path = "../atlas-config" }
atlas-build = { path = "../atlas-build" }
atlas-formatter = { path = "../atlas-formatter" }
clap = { version = "4.5", features = ["derive"] }
rustyline = "17.0"  # Line editor for REPL
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }  # TUI framework for rich REPL mode
crossterm = "0.28"  # Terminal backend for ratatui
dirs = "5.0"  # Platform-specific directories (for history file)
anyhow = "1.0"
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
insta = { workspace = true }
serde_json = "1.0"
predicates = "3.0"
