[package]
name = "atlas-formatter"
version.workspace = true
edition.workspace = true

[dependencies]
atlas-runtime = { path = "../atlas-runtime" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
rstest.workspace = true
pretty_assertions.workspace = true
insta.workspace = true
