[package]
name = "atlas-jit"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
atlas-runtime = { path = "../atlas-runtime" }

# Cranelift JIT compilation
cranelift-codegen = "0.128"
cranelift-frontend = "0.128"
cranelift-jit = "0.128"
cranelift-module = "0.128"
cranelift-native = "0.128"

# Shared utilities
thiserror = "2.0"

[dev-dependencies]
rstest.workspace = true
pretty_assertions.workspace = true
