[package]
name = "atlas-lsp"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[lib]
name = "atlas_lsp"
path = "src/lib.rs"

[[bin]]
name = "atlas-lsp"
path = "src/main.rs"

[dependencies]
atlas-runtime = { path = "../atlas-runtime" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rayon = "1.10"
lru = "0.12"

[dev-dependencies]
tokio-test = "0.4"
rstest = "0.23"
