[package]
name = "atlas-package"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
semver = { version = "1.0", features = ["serde"] }
thiserror = "2.0"
chrono = "0.4"

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
tempfile = "3.8"
