[package]
name = "atlas-package"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
semver = { version = "1.0", features = ["serde"] }
thiserror = "2.0"
chrono = "0.4"
pubgrub = "0.3"
reqwest = { version = "0.13", features = ["blocking"] }
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
tempfile = "3.8"
