[package]
name = "atlas-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
atlas-config = { path = "../atlas-config" }
rand = "0.8"
ordered-float = "4.5"
regex = "1"
chrono = "0.4"
chrono-tz = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2.1"
base64 = "0.22"
tokio = { version = "1.49", features = ["rt", "sync", "time", "fs", "io-util", "macros"] }
futures-util = "0.3"

# FFI support (phase-10b/10c)
libloading = "0.9"
libffi = "5.1"

# Path manipulation (phase-13a)
pathdiff = "0.2"
dirs = "5.0"

# Compression (phase-14a, 14b, 14c)
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
termcolor = "1.4.1"

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
proptest.workspace = true
pretty_assertions.workspace = true
tempfile = "3.8"
criterion = "0.5"
atlas-formatter = { path = "../atlas-formatter" }

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "typechecker"
harness = false

[[bench]]
name = "interpreter"
harness = false

[[bench]]
name = "vm_performance_benches"
harness = false

[[bench]]
name = "stdlib_benchmarks"
harness = false

[[bench]]
name = "parity"
harness = false
