[package]
name = "atlas-runtime-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.atlas-runtime]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
doc = false

[[bin]]
name = "fuzz_typechecker"
path = "fuzz_targets/fuzz_typechecker.rs"
doc = false

[[bin]]
name = "fuzz_eval"
path = "fuzz_targets/fuzz_eval.rs"
doc = false

[[bin]]
name = "parser_fuzz"
path = "fuzz_targets/parser_fuzz.rs"
doc = false

[[bin]]
name = "typechecker_fuzz"
path = "fuzz_targets/typechecker_fuzz.rs"
doc = false

[[bin]]
name = "vm_fuzz"
path = "fuzz_targets/vm_fuzz.rs"
doc = false
